k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-website
  labels:
    app: portfolio-website
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: portfolio-website
  template:
    metadata:
      labels:
        app: portfolio-website
    spec:
      containers:
        - name: portfolio-website
          image: vinay526/portfolio-website:v1
          ports:
            - containerPort: 8080
