k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-website-service
spec:
  type: NodePort
  selector: 
    app: portfolio-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
